Correctly wrap Footer columns on smaller screens

--- a/components/footer/index.scss
+++ b/components/footer/index.scss
@@ -12,8 +12,9 @@
 .rvo-footer {
   color: var(--utrecht-page-footer-color);
   display: flex;
+  flex-wrap: wrap;
   gap: var(--rvo-footer-column-gap);
-  justify-content: center;
+  justify-content: flex-start;
   overflow: hidden;
   padding-inline-end: var(--utrecht-page-footer-padding-inline-end);
   padding-inline-start: var(--utrecht-page-footer-padding-inline-start);
@@ -47,12 +48,9 @@
 }
 
 .rvo-footer-column {
+  flex: 1 0;
   padding-block-end: var(--rvo-footer-column-padding-block-end);
   padding-block-start: var(--rvo-footer-column-padding-block-start);
-}
-
-.rvo-footer-column:only-of-type {
-  flex: 1;
 }
 
 h3.rvo-footer-menu-title {
